--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../../../Downloads/Aviary-Android-SDK
-android.library.reference.2=../appcompat_v7
+android.library.reference.1=../../../Documents/workspace/appcompat_v7
+android.library.reference.2=../Aviary-Android-SDK
